worked on all fixes

--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -241,7 +241,6 @@
 
 /* Forms */
 
-/* TODO @alexandrosraikos: Disable auto margin for asset archive header. */
 .policycloud-marketplace form {
   margin: 0 auto;
   max-width: 900px;
@@ -477,7 +476,6 @@
   content: " ";
 }
 
-/* TODO @alexandrosraikos: Correct content aliasing on some specific heights. (#52) */
 #policycloud-marketplace-modal {
   /* Positioning */
   position: fixed;
@@ -529,12 +527,21 @@
   z-index: 600;
 
   /* Display & Box Model */
+  width: auto;
   max-width: 60vw;
   min-height: 50px;
   /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);*/
 
   /* Other */
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, calc(-50% - 0.5px));
+}
+
+/**
+* Quick fix or image positioning.
+*/
+#policycloud-marketplace-modal > .container img {
+  /* Positioning */
+  vertical-align: middle !important;
 }
 
 #policycloud-marketplace-modal > .container > .previous,
@@ -717,6 +724,10 @@
 
   /* Other */
   font-weight: normal;
+}
+
+#policycloud-marketplace-assets-grid > ul > li > a > .cover > img {
+  object-fit: contain;
 }
 
 #policycloud-marketplace-assets-grid > ul > li > a > .cover > div {
@@ -980,6 +991,7 @@
   /* Display & Box Model */
   display: flex;
   align-items: center;
+  margin: 0;
 }
 
 #policycloud-marketplace-asset-archive > .content > header > form > fieldset {
