--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -1267,32 +1267,32 @@
 * Asset editing form
 */
 
-#policycloud-marketplace-asset-editing.modal-hidden {
+#policycloud-marketplace-description-editing.modal-hidden {
   display: none;
 }
 
-#policycloud-marketplace-asset-editing {
+#policycloud-marketplace-description-editing {
   margin: 20px 10px;
 }
 
-#policycloud-marketplace-asset-editing {
+#policycloud-marketplace-description-editing {
   background-color: var(--policycloud-background-color);
 }
 
-#policycloud-marketplace-asset-editing form fieldset {
+#policycloud-marketplace-description-editing form fieldset {
   border: none;
 }
 
-#policycloud-marketplace-asset-editing .fieldset {
+#policycloud-marketplace-description-editing .fieldset {
   border: none;
 }
 
-#policycloud-marketplace-asset-editing input[type="file"] {
+#policycloud-marketplace-description-editing input[type="file"] {
   font-size: 14px;
   margin-bottom: 20px;
 }
 
-#policycloud-marketplace-asset-editing .file {
+#policycloud-marketplace-description-editing .file {
   display: flex;
   width: 100;
   flex-wrap: wrap;
@@ -1305,25 +1305,25 @@
   margin: 10px 0;
 }
 
-#policycloud-marketplace-asset-editing .file:last-of-type {
+#policycloud-marketplace-description-editing .file:last-of-type {
   margin-bottom: 20px;
 }
 
-#policycloud-marketplace-asset-editing .file > * {
+#policycloud-marketplace-description-editing .file > * {
   margin-right: 15px;
 }
 
-#policycloud-marketplace-asset-editing .file > div {
+#policycloud-marketplace-description-editing .file > div {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-#policycloud-marketplace-asset-editing .file input[type="file"] {
+#policycloud-marketplace-description-editing .file input[type="file"] {
   margin-bottom: 0;
 }
 
-#policycloud-marketplace-asset-editing .file .delete {
+#policycloud-marketplace-description-editing .file .delete {
   padding: 0px 6px;
   margin-right: 15px;
   display: block;
@@ -1335,23 +1335,33 @@
   transition: all 0.2s ease-in-out;
 }
 
-#policycloud-marketplace-asset-editing .file .delete:hover {
+#policycloud-marketplace-description-editing .file .delete:hover {
   border: none;
   transform: scale(0.9);
   transition: all 0.2s ease-in-out;
 }
 
+#policycloud-marketplace-description-editing .actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#policycloud-marketplace-description-editing .actions button {
+  margin: 10px;
+}
+
 @media screen and (max-width: 650px) {
-  #policycloud-marketplace-asset-editing form {
+  #policycloud-marketplace-description-editing form {
     width: 100%;
     height: 100%;
     padding: 10px;
   }
-  #policycloud-marketplace-asset-editing form > fieldset {
+  #policycloud-marketplace-description-editing form > fieldset {
     padding: 10px;
   }
 
-  #policycloud-marketplace-asset-editing .close {
+  #policycloud-marketplace-description-editing .close {
     color: black !important;
   }
 }
