--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -856,6 +856,18 @@
   padding: 0;
 }
 
+.policycloud-marketplace.featured-descriptions .descriptions-grid > ul > li {
+  width: calc(100% - 20px);
+}
+.policycloud-marketplace.featured-descriptions
+  .descriptions-grid
+  > ul
+  > li
+  > a
+  > div {
+  width: 100%;
+}
+
 .policycloud-marketplace.featured-descriptions .statistics {
   display: flex;
   justify-content: space-evenly;
@@ -876,6 +888,7 @@
 
 .policycloud-marketplace.featured-descriptions .statistics figcaption {
   opacity: 0.7;
+  font-size: 40%;
 }
 
 /*
