--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -7,6 +7,8 @@
 *
 */
 
+/* TODO @alexandrosraikos: Redesign loading indicators. #55 */
+
 :root {
   --policycloud-text-color: #111111;
   --policycloud-text-color-secondary: #464646;
