--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -7,6 +7,7 @@
 *
 */
 
+/* TODO @alexandrosraikos: Restyle actions to match PolicyCloud. #74 */
 /* TODO @alexandrosraikos: Redesign loading indicators. #55 */
 
 :root {
